# ezprint-

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  SumatraPDF-settings.txt  database_schema_postgresql.sql  debug_users.py  ezprint_installer.iss  main.cmd  netifaces.py  requirements.txt  run_all_tests.py  start.bat  start.py  start_shopkeeper.py  test_crash_chain_fix.py  test_db.py  test_db_connection.py  test_eventlet.py  test_report.txt  test_socketio.py  test_step3_migration.py  test_step4_migration.py  test_step5_client.py  test_url_processor.py  tmp_trace_output.txt  verify_step3_redis.py
docs/: README.md  (+9 more)
ezprint-backend/: .env.example  .gitignore  Caddyfile  Caddyfile.azure  README.md  docker-compose.azure.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
ezprint-backend/alembic/: env.py
ezprint-backend/alembic/versions/: 0001_initial.py  0002_print_job_files.py
ezprint-backend/app/: __init__.py  main.py
ezprint-backend/app/core/: config.py  logging.py  security.py
ezprint-backend/app/db/: models.py  session.py
ezprint-backend/app/schemas/: auth.py  dashboard.py  jobs.py  printers.py  shops.py
ezprint-backend/app/services/: billing.py  document_converter.py  file_processor.py  jobs.py  notifier.py  storage.py
ezprint-backend/app/static/: upload.html
ezprint-backend/app/tenancy/: deps.py
ezprint-backend/app/workers/: cleanup.py
ezprint-backend/docker/: Dockerfile  entrypoint.sh  minio-init.sh
ezprint-backend/scripts/: create_tenant.py  smoke_test.py
ezprint-backend/tests/: test_smoke.py
(+140 files in other folders)
